# Product-List-Scraper-Template

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.example.yml  settings.yml  targets.example.yml  targets.yml
docs/: CONFIG_GUIDE.md  SECURITY_AND_LEGAL.md  architecture.md  operations.md  testing.md
fixtures/: detail_1.html  detail_2.html  list.html
sample_output/: products.csv  products.sample.csv
src/product_scraper/: cli.py  config.py  exporter.py  fetcher.py  parser.py  validator.py
tests/: test_cli.py  test_config.py  test_exporter.py  test_fetcher.py  test_parser.py  test_validator.py
